# catcode

./: .gitignore  Cargo.toml  LANGUAGES.md  README.md  main.py  pyproject.toml
.claude/: settings.json
skills/catcode/: SKILL.md
src/: ext_map.rs  main.py  main.rs  scanner.rs  types.rs
src/parser/: base.rs  c.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
src/parsers/: __init__.py  base.py  c.py  csharp.py  go.py  java.py  javascript.py  kotlin.py  php.py  python.py  ruby.py  rust.py  swift.py
tests/: cli_validation.rs  cpp.rs  directory_scan.rs  java.rs  javascript.rs  python.rs  rust_lang.rs  typescript.rs
tests/c/: c_parsing.rs  main.c
tests/common/: mod.rs
tests/cpp/: cpp_parsing.rs  main.cpp  sample.cpp
tests/csharp/: Service.cs  csharp_parsing.rs
tests/go/: go_parsing.rs  main.go
tests/java/: Sample.java  Service.java  java_parsing.rs
tests/javascript/: app.js  javascript_parsing.rs  sample.js
tests/kotlin/: Service.kt  kotlin_parsing.rs
tests/php/: Service.php  php_parsing.rs
tests/python/: classes.py  imports.py  inheritance.py  python_parsing.rs  sample.py
tests/ruby/: ruby_parsing.rs  service.rb
tests/rust/: lib.rs  rust_parsing.rs  sample.rs
tests/swift/: Service.swift  swift_parsing.rs
tests/typescript/: imports.ts  sample.ts  service.ts  typescript_parsing.rs
