[package]
name = "catcode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catcode"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin = "0.3"
tree-sitter-swift = "0.6"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
streaming-iterator = "0.1"
