[package]
name = "catcode"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-code-analysis = "0.0.25"
tree-sitter = "=0.20.9"
tree-sitter-java = "=0.20.0"
tree-sitter-rust = "=0.20.3"
tree-sitter-python = "=0.20.2"
tree-sitter-javascript = "=0.20.0"
tree-sitter-typescript = "=0.20.1"
tree-sitter-mozcpp = "=0.20.2"
