[project]
name = "catcode"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter-language-pack>=1.3.3",
]

[project.scripts]
catcode = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
